[gd_scene load_steps=6 format=2]

[ext_resource path="res://MoveAndBounce/MoveOnWall.gd" type="Script" id=1]
[ext_resource path="res://Debug/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://MoveAndBounce/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/font_small.tres" type="DynamicFont" id=5]

[node name="MoveOnWall" type="Node2D"]
script = ExtResource( 1 )

[node name="Walls" type="Node" parent="."]
editor/display_folded = true

[node name="Wall" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 480.535, 188.617 )

[node name="Wall2" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 458.096, 519.021 )

[node name="Wall3" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 204.295, 354.206 )
rotation = 1.5708

[node name="Wall4" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 718.86, 354.98 )
rotation = -0.785398

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_left = 77.3778
margin_right = 117.378
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonCollide" type="LinkButton" parent="Control"]
margin_left = 37.7801
margin_right = 378.78
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "move_and_collide"

[node name="ButtonSlide" type="LinkButton" parent="Control"]
margin_left = 451.754
margin_right = 758.754
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "move_and_slide"

[node name="UseVelocity" type="CheckButton" parent="Control"]
margin_left = 525.589
margin_top = 52.0656
margin_right = 758.589
margin_bottom = 110.066
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.419608, 0.419608, 0.419608, 1 )
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_pressed = Color( 0.0941176, 0.847059, 0.705882, 1 )
disabled = true
text = "real velocity"

[connection signal="pressed" from="Control/ButtonCollide" to="." method="_on_ButtonCollide_pressed"]
[connection signal="pressed" from="Control/ButtonSlide" to="." method="_on_ButtonSlide_pressed"]
[connection signal="toggled" from="Control/UseVelocity" to="." method="_on_UseVelocity_toggled"]
